create weather app html file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script
+			src="https://code.jquery.com/jquery-3.6.0.min.js"
+			integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+			crossorigin="anonymous"
+		></script>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel = "stylesheet"  href="css/style.css">
+    <script src ="js/script.js" defer></script>
+    <title>Wheather app</title>
+</head>
+<body>
+    <div class ="container">
+        <div class = "searchBox">
+            <input type="text" class="searchCity" id="serchCity" placeholder="Search">
+          <button class="search"> <i class="material-icons">search</i></button>
+        </div>
+        <div class="weather loading">
+            <h2 class="city">Weather in </h2>
+            <h1 class="temp"> 83°</h1>
+            <img scr="" alt="" class="icon">
+            <div class="description">Cloudy</div>
+            <div class="humidity">Humidity: 60 % per hour</div>
+            <div class="wind">Wind speed: 6.2 km/h</div>
+        </div>
+</body>
+</html>
